; ModuleID = '/home/carl/AnghaBench/linux/drivers/crypto/cavium/cpt/extr_cptvf_main.c_cptvf_free_irq_affinity.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/crypto/cavium/cpt/extr_cptvf_main.c_cptvf_free_irq_affinity.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.cpt_vf = type { i32*, i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.cpt_vf*, i32)* @cptvf_free_irq_affinity to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @cptvf_free_irq_affinity(%struct.cpt_vf* %0, i32 %1) #0 {
  %3 = alloca %struct.cpt_vf*, align 8
  %4 = alloca i32, align 4
  store %struct.cpt_vf* %0, %struct.cpt_vf** %3, align 8
  store i32 %1, i32* %4, align 4
  %5 = load %struct.cpt_vf*, %struct.cpt_vf** %3, align 8
  %6 = getelementptr inbounds %struct.cpt_vf, %struct.cpt_vf* %5, i32 0, i32 1
  %7 = load i32, i32* %6, align 8
  %8 = load i32, i32* %4, align 4
  %9 = call i32 @pci_irq_vector(i32 %7, i32 %8)
  %10 = call i32 @irq_set_affinity_hint(i32 %9, i32* null)
  %11 = load %struct.cpt_vf*, %struct.cpt_vf** %3, align 8
  %12 = getelementptr inbounds %struct.cpt_vf, %struct.cpt_vf* %11, i32 0, i32 0
  %13 = load i32*, i32** %12, align 8
  %14 = load i32, i32* %4, align 4
  %15 = sext i32 %14 to i64
  %16 = getelementptr inbounds i32, i32* %13, i64 %15
  %17 = load i32, i32* %16, align 4
  %18 = call i32 @free_cpumask_var(i32 %17)
  ret void
}

declare dso_local i32 @irq_set_affinity_hint(i32, i32*) #1

declare dso_local i32 @pci_irq_vector(i32, i32) #1

declare dso_local i32 @free_cpumask_var(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
